# Convolucao-Laplaciano

./: README.md  pyproject.toml
convolucao_laplaciano/: convolucao.py
convolucao_laplaciano/dashboard/: Convolucao.py  commom.py
convolucao_laplaciano/dashboard/pages/: 1_Filtros_Baixa.py  2_Filtro_Laplaciano.py  3_Gradiente.py  Filtros_Baixa.py  Filtros_Laplaciano.py  Gradiente.py
